src/objects/ICCS_Product_Country__c.object
<CustomObject>
    <description>To be used by the ICCS Administrator to define a product availability by country.</description>
    <fields>
        <fullName>Accelerated_Settlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accelerated Settlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used to link the record to a ISO Country</description>
        <label>ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>ICCS Product Countries</relationshipLabel>
        <relationshipName>ICCS_Product_Countries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICCS_Product_Country_Name__c</fullName>
        <description>Represents the CASS Name or BSP Billing of related ISO Country if available</description>
        <formula>CASE( Product__r.Name , 
&apos;BSP&apos;, BLANKVALUE(Country__r.BSP_Country_free_text__c, Country__r.Name) , 
&apos;CASS&apos;, BLANKVALUE(Country__r.CASS_Country_free_text__c, Country__r.Name) ,
Country__r.Name )</formula>
        <label>ICCS Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ICCS Product Countries</relationshipLabel>
        <relationshipName>ICCS_Product_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ICCS Product Country</label>
    <nameField>
        <displayFormat>CT-{000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICCS Product Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ProductFamilyMustBeICCS</fullName>
        <active>true</active>
        <description>Ensure that the selected Product is part of the ICCS family.</description>
        <errorConditionFormula>NOT( ISPICKVAL(Product__r.Family, &apos;ICCS&apos;) )</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Invalid selection. Please select a product from the ICCS family.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductIsMandatory</fullName>
        <active>true</active>
        <description>Ensure a product is selected in the Product lookup.</description>
        <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>The Product field is mandatory. Please select a value.</errorMessage>
    </validationRules>
</CustomObject>